--- a/backend/package.json
+++ b/backend/package.json
@@ -6,10 +6,10 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.3",
     "mysql2": "^3.8.0",
     "sequelize": "^6.35.2"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
